# nugat-0.6.0

./: .cproject  .gitignore  .project  AUTHORS  CMakeCache.txt  CMakeLists.txt  INSTALL  INSTALL-0.5.4  INSTALL-0.6  MIGRATION-0.5.4  MIGRATION-0.6.0  MIGRATION-0.6.0.md  Makefile  Makefile.am  Makefile.in  Migration.txt  NEWS  README  README-0.5.0  README-0.5.4  README-0.6.0  README.md  README.txt  acinclude.m4  aclocal.m4.ORIG  compileErrors.txt  config.h  config.h.in  config.status  configure  configure.ac  libtool
.deps/: smgameDummyMac.Plo  smgameMain.Po
cmake/: NuGATUtils.cmake
contrib/: BddEnc.c.patch  Lily-1.0.2.patch  Makefile  Makefile.am  Makefile.in
doc/: INSTALL-NuGAT-0.6.0  INSTALL-NuSMV-2.6.0
examples/: Makefile  Makefile.am  Makefile.in  flip-coin-NUGAT-v01.script  flip-coin-NUGAT-v02.smv  ltl-synthesis.smv  ring-3blocks-3steps.nugat.smv  simple.smv  test-nugat.smv  test-nugat_ns.smv
examples/app/: simple-genreac.smv  simple.smv
examples/flip-coin/: flip-coin-NUGAT-v01.smv
examples/flip-coin/style-01/: flip-coin-NUGAT-v03.smv  flip-coin-NUGAT-v04.smv
examples/flip-coin/style-02/: flip-v1.smv  flip-v2.smv
extras/: MIGRATION-0.6.0.md
nusmv-config/: nusmv-2.pc
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/addons/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  addons.h  addonsPkg.c
src/addons/.deps/: addonsPkg.Plo
src/addons/game/: CMakeLists.txt  GameHierarchy.c  GameHierarchy.h  GamePlayer.c  GamePlayer.h  GameStrategy.c  GameStrategy.h  Makefile  Makefile.am  Makefile.in  PropDbGame.c  PropDbGame.h  PropDbGame_private.h  PropGame.c  PropGame.h  PropGame_private.h  TypeCheckerGame.c  TypeCheckerGame.h  game.h  gameBuildModel.c  gameCheckGenReactivityBuchiSpec.c  gameCheckLTLSF07.c  gameCheckLTLSF07_gba.c  gameCheckLTLSF07_gba.h  gameCheckLTLSF07_gba_wring.c  gameCheckLTLSF07_gba_wring.h  gameCheckReachAvoidSpec.c  gameCmd.c  gameCmd.h  gameFlatten.c  gameGeneral.c  gameInt.h  gameOpt.c  gamePkg.c  gameReqToGame.c  gameUnrealCore.c  gameVarEncoding.c  gameWriteModel.c  gameXmlReader.c
src/addons/game/.deps/: GameHierarchy.Plo  GamePlayer.Plo  GameStrategy.Plo  PropDbGame.Plo  PropGame.Plo  TypeCheckerGame.Plo  gameBuildModel.Plo  gameCheckGenReactivityBuchiSpec.Plo  gameCheckLTLSF07.Plo  gameCheckLTLSF07_gba.Plo  gameCheckLTLSF07_gba_wring.Plo  gameCheckReachAvoidSpec.Plo  gameCmd.Plo  gameFlatten.Plo  gameGeneral.Plo  gameOpt.Plo  gamePkg.Plo  gameReqToGame.Plo  gameUnrealCore.Plo  gameVarEncoding.Plo  gameWriteModel.Plo  gameXmlReader.Plo
src/addons/game/fsm/: GameBddFsm.c  GameBddFsm.h  GameBeFsm.c  GameBeFsm.h  GameSexpFsm.c  GameSexpFsm.h
src/addons/game/fsm/.deps/: GameBddFsm.Plo  GameBeFsm.Plo  GameSexpFsm.Plo
src/addons/game/parser/: game_symbols.h
src/addons/game/walkers/: CheckerGame.c  CheckerGame.h  CheckerGame_private.h  PrinterGame.c  PrinterGame.h  PrinterGame_private.h  PrinterSexpGame.c  PrinterSexpGame.h  PrinterSexpGame_private.h
src/addons/game/walkers/.deps/: CheckerGame.Plo  PrinterGame.Plo  PrinterSexpGame.Plo
src/parser/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  filetest.txt  grammar.c  grammar.h  grammar.y  grammar.y.1  grammar.y.1.55  grammar.y.2  grammar.y.2.55  grammar.y.3  input.c  input.l  input.l.1  input.l.1.55  input.l.2  input.l.2.55  input.l.3
src/parser/.deps/: grammar.Plo  input.Plo
src/parser/ylwrap29337/: lex.nusmv_yy.c
src/parser/ylwrap30095/: y.tab.h
src/parser/ylwrap31065/: y.tab.c
src/parser/ylwrap4223/: lex.nusmv_yy.c
src/parser/ylwrap7961/: y.tab.c  y.tab.h
src/parser/ylwrap8826/: lex.yy.c
src/smgame/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  printStrategy.h  smgameCmd.c  smgameDummyMac.c  smgameInit.c  smgameInt.h  smgameMain.c  smgameMisc.c  smgameVers.c
src/smgame/.deps/: smgameCmd.Plo  smgameInit.Plo  smgameMisc.Plo  smgameVers.Plo
test/: Makefile  Makefile.am  Makefile.in  test.sh  test_ltlgame.smv  test_no_ltlgame.smv
